# imageInf

./: .cursorignore  .env.iframe.example  .flake8  .gitignore  .sample.env  Dockerfile  Dockerfile.client  Makefile  README-IFRAME-TEST.md  README.md  conftest.py  docker-compose.built.yml  docker-compose.iframe-test.yml  docker-compose.yml  preload_models.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml
client/: .eslint.cjs  README.md  dev.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/src/: App.css  App.tsx  config.ts
client/src/components/: DemoInterface.tsx  ImageBrowser.tsx  InferenceInterface.tsx  TapisFileView.tsx  TapisImageViewer.tsx
client/src/hooks/: useConfig.ts  useFileContent.ts  useInference.ts  useInferenceModel.ts  useToken.ts
client/src/pages/: Callback.tsx  (+6 more)
demo/: README.md  classify_images_in_geoapi_project.py
example/: README.md  example_inference.py  inference_demo.ipynb
imageinf/: celery_app.py  main.py
imageinf/fixtures/: files.py  tapis.py
imageinf/inference/: __init__.py  base_transformer.py  categories.py  clip_base.py  clip_models.py  config.py  metadata.py  models.py  processor.py  registry.py  routes.py  routes_test.py  tasks.py  tasks_test.py  vit_models.py
imageinf/status/: routes.py  routes_test.py
imageinf/utils/: auth.py  auth_test.py  config.py  io.py  metadata.py
local_conf/: iframe-test.html  nginx.built.conf  nginx.cep-test.conf.template  nginx.client.conf  nginx.conf
scripts/: setup_iframe_token.py
tests/: test_status.py
(+5 files in other folders)
